<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zeiterfassung</string>
    <string name="app_creator">Moritz Hoffmann</string>

    <string name="about_by">"by "</string>
    <string name="about_send_feedback">SEND FEEDBACK</string>
    <string name="about_feedback_description">Please enter your feedback here:</string>
    <string name="about_feedback_placeholder">"Hi, if I may speak freely: "</string>
    <string name="about_feedback_thanks">Thank you!</string>

    <string name="nav_item_1_overview">Overview</string>
    <string name="nav_item_2_zones">Zones</string>
    <string name="nav_item_3_maplive">Live Map</string>
    <string name="nav_item_4_statistics">Statistics</string>
    <string name="nav_item_5_settings">Settings</string>
    <string name="nav_item_6_about">About</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="servicecontrol_start">START</string>
    <string name="servicecontrol_stop">STOP</string>

    <string name="overview_end_pending">pending</string>
    <string name="overview_no_entries">No entries yet.</string>


    <!-- Colors -->
    <color name="transparent">#00FFFFFF</color>
    <color name="white">#FFFFFFFF</color>
    <color name="white_90">#EEFFFFFF</color>
    <color name="black">#FF000000</color>
    <color name="almost_black">#FF111111</color>
    <color name="almost_white">#FFEEEEEE</color>
    <color name="yellow">#F3BB25</color>
    <color name="red">#F32A25</color>

    <color name="marker_accurate">@color/greenish</color>
    <color name="marker_accurate_border">@color/greenish_light</color>
    <color name="marker_inaccurate">@color/greenish_lighter</color>
    <color name="marker_inaccurate_border">@color/greenish_almost_white</color>
    <color name="marker_no_connection">#FF880B08</color>
    <color name="marker_no_connection_border">@color/red</color>

    <color name="grey_05">#FFF2F2F2</color>
    <color name="grey_10">#FFE6E6E6</color>
    <color name="grey_20">#FFCCCCCC</color>
    <color name="grey_25">#FFBFBFBF</color>
    <color name="grey_30">#FFB3B3B3</color>
    <color name="grey_40">#FF999999</color>
    <color name="grey_50">#FF808080</color>
    <color name="grey_60">#FF666666</color>
    <color name="grey_75">#FF404040</color>
    <color name="grey_05_alpha">#0D000000</color>
    <color name="grey_10_alpha">#1A000000</color>
    <color name="grey_25_alpha">#40000000</color>
    <color name="grey_50_alpha">#80000000</color>
    <color name="grey_60_alpha">#99000000</color>
    <color name="grey_75_alpha">#BF000000</color>

    <!-- true RGB colors -->
    <color name="greenish">#FF025167</color>
    <color name="greenish_light">#FF1B7C97</color>
    <color name="greenish_lighter">#FF54A5BD</color>
    <color name="greenish_almost_white">#FF94D2E3</color>

    <color name="greenish_100">#FF025167</color>
    <color name="greenish_75">#BF025167</color>
    <color name="greenish_50">#80025167</color>
    <color name="greenish_25">#40025167</color>
    <color name="greenish_20">#33025167</color>
    <color name="greenish_15">#26025167</color>
    <color name="greenish_10">#1A025167</color>
    <color name="greenish_5">#0D025167</color>

    <color name="greenish_shade_1">@color/greenish_100</color>
    <color name="greenish_shade_2">#E6025167</color>
    <color name="greenish_shade_3">#CD025167</color>
    <color name="greenish_shade_4">#B4025167</color>
    <color name="greenish_shade_5">#9B025167</color>
    <color name="greenish_shade_6">#82025167</color>

    <color name="cardview_background">#FFF9F9F9</color>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: REWORK
    <color name="navigation_drawer_bg">@color/white</color>
    <color name="navigation_drawer_top_bg">@color/greenish_10</color>
    <color name="navigation_drawer_items">@color/grey_navigation_drawer_text</color>
    <color name="navigation_drawer_separator">@color/greenish_10</color>
-->

</resources>
