<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="de.mohoff.zeiterfassung.ui.components.about.SendFeedback"
              android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/about_feedback_description"
        android:gravity="center_vertical"/>
    <EditText
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="300dp"
        android:gravity="top"
        android:padding="8dp"
        android:text="@string/about_feedback_placeholder"
        android:textColor="@color/greenish"
        android:background="@color/greenish_5"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/about_feedback_thanks"
        android:gravity="center_vertical"/>
</LinearLayout>
